// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LAN/> Snapshot managed with enabled DHCP. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <form>
    <h3>
      LAN Settings
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        LAN mode
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="5"
      >
        Router IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="5"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="6"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="6"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="7"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="7"
        >
          Enable DHCP
        </label>
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="12"
      >
        DHCP start
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="12"
          min="1"
          required=""
          type="number"
          value="123123"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="13"
      >
        DHCP max leases
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="13"
          min="1"
          required=""
          type="number"
          value="150"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="14"
      >
        Lease time (hours)
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="14"
          min="1"
          required=""
          type="number"
          value="43200"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  >
    <h3>
      DHCP clients
    </h3>
    <p>
      No DHCP clients found.
    </p>
  </div>
</div>
`;

exports[`<LAN/> Snapshot managed. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <form>
    <h3>
      LAN Settings
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        LAN mode
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="5"
      >
        Router IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="5"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="6"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="6"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="7"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="7"
        >
          Enable DHCP
        </label>
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged (dhcp). 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <form>
    <h3>
      LAN Settings
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        LAN mode
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        IPv4 protocol
      </label>
      <select
        class="custom-select"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="3"
      >
        DHCP hostname
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Hostname which will be provided to DHCP server.
      </small>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged none. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <form>
    <h3>
      LAN Settings
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        LAN mode
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        IPv4 protocol
      </label>
      <select
        class="custom-select"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged static. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <form>
    <h3>
      LAN Settings
    </h3>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="1"
      >
        LAN mode
      </label>
      <select
        class="custom-select"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        IPv4 protocol
      </label>
      <select
        class="custom-select"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="6"
      >
        IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="6"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="7"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="7"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="8"
      >
        Gateway
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="8"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="9"
      >
        DNS server 1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="9"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="10"
      >
        DNS server 2
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="10"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;
